Set link preview stuff

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 		<title>Grant Seastream</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <link rel="icon" href="images/icon.png">
+		<meta property="og:image" content="http://grant.sea.stream/images/banner.jpg">
+		<meta property="og:description" content="Grant Seastream | Technical Software Engineer">
+		<link rel="icon" href="images/icon.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
