Remove name from preview caption

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta property="og:image" content="http://grant.sea.stream/images/banner.jpg">
-		<meta property="og:description" content="Grant Seastream | Technical Software Engineer">
+		<meta property="og:description" content="Technical Software Engineer">
 		<link rel="icon" href="images/icon.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
