Add banner preview crop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Grant Seastream</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta property="og:image" content="http://grant.sea.stream/images/banner.jpg">
+		<meta property="og:image" content="http://grant.sea.stream/images/banner-preview.jpg">
 		<meta property="og:description" content="Technical Software Engineer">
 		<link rel="icon" href="images/icon.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
