Remove some fluff

--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<p>My name is Grant. I am cool.</p>
-								<p>Hey now!</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/emclinton.jpg" alt="" /></span>
-								<p>We out here gettin' OILY.</p>
+								<p>I am good at my job.</p>
 							</article>
 
 						<!-- About -->
